# requirement-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/rcli/: SKILL.md
.rcli/: metadata.json
.rcli/decisions/: ADR-1.json  ADR-2.json  ADR-3.json  ADR-4.json
.rcli/requirements/: REQ-1.json  REQ-10.json  REQ-11.json  REQ-12.json  REQ-13.json  REQ-14.json  REQ-15.json  REQ-16.json  REQ-17.json  REQ-18.json  REQ-2.json  REQ-3.json  REQ-4.json  REQ-5.json  REQ-6.json  REQ-7.json  REQ-8.json  REQ-9.json
docs/: ARCHITECTURE.md  REQUIREMENTS.md  SKILL_FILE.md
src/rcli/: __init__.py  __main__.py  cli.py  search_engine.py  skill.py
src/rcli/commands/: decision.py  export.py  impact.py  init.py  json_input.py  lint.py  req.py  search.py  status.py
src/rcli/formatters/: __init__.py  html.py  json_fmt.py  markdown.py  table.py
src/rcli/models/: __init__.py  decision.py  metadata.py  requirement.py
src/rcli/storage/: __init__.py  paths.py  store.py
tests/: conftest.py  test_cli_decision.py  test_cli_export.py  test_cli_init.py  test_cli_req.py  test_formatters.py  test_json_input.py  test_models.py  test_search.py  test_storage.py
